# WhatWeDontC

./: pyproject.toml
examples/mnist/: metrics.ipynb
src/conf/experiment/galaxy10_Flow/: embed.yaml  meta.yaml  model.yaml  sweeps.yaml
src/conf/experiment/galaxy10_VAE/: embed.yaml  meta.yaml  model.yaml  train.yaml
src/conf/experiment/rgbmnist_Flow/: embed.yaml  meta.yaml  model.yaml  sweeps.yaml  train.yaml
src/conf/experiment/rgbmnist_VAE/: meta.yaml  model.yaml
src/conf/trainer/: multi_node_gpu.yaml
src/wwdc/: documentation.md
src/wwdc/data/: embeddings.py  galaxy10_decals.py  modules.py  rgbmnist.py
src/wwdc/inference/: embed.py  modules.py
src/wwdc/models/: galaxy10.py  modules.py  rgbmnist.py
src/wwdc/training/: lightning_loader.py  train.py
