[project]
name = "wwdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Rogers", email = "brianrogers0401@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
wwdc = "wwdc:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
